[gd_scene load_steps=4 format=3 uid="uid://bjn2xvprffus5"]

[ext_resource type="Script" path="res://ui/shop/booster/booster.gd" id="1_jxpe5"]
[ext_resource type="Texture2D" uid="uid://crksdkyn42x20" path="res://assets/art/ui/booster.png" id="1_qmic3"]
[ext_resource type="Texture2D" uid="uid://c2htrle72ovoy" path="res://assets/art/ui/gold.png" id="3_4bbc7"]

[node name="Booster" type="VBoxContainer"]
theme_override_constants/separation = 4
script = ExtResource("1_jxpe5")

[node name="BoosterTexture" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("1_qmic3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="PriceLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "18$"
horizontal_alignment = 1

[node name="GoldIcon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4bbc7")
expand_mode = 2
